[package]
name = "dashql_proto"
version = "0.1.0"
authors = ["Andre Kohn <kohn.a@outlook.com>"]
edition = "2018"

[lib]
name = "dashql_proto"
path = "gen/proto_generated.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.7"
