load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

py_binary(
    name = "update_bazel_hashes",
    srcs = ["update_bazel_hashes.py"],
    main = "update_bazel_hashes.py",
)

# Repin native crate universe (root Cargo.toml / Cargo.lock -> @crates).
# Usage: bazel run //scripts:repin_crates
sh_binary(
    name = "repin_crates",
    srcs = ["repin_crates.sh"],
)
