load("@rules_cc//cc:defs.bzl", "cc_library")

# Stub implementations for DuckDB features that are excluded from the build
# These provide minimal/no-op implementations to satisfy linker dependencies

cc_library(
    name = "duckdb_stubs",
    visibility = ["//visibility:public"],
    srcs = [
        "compression_stubs.cpp",
        "core_functions_loader.cpp",
        "extension_stubs.cpp",
        "http_stubs.cpp",
        "mbedtls_stubs.cpp",
        "remaining_stubs.cpp",
        "system_stubs.cpp",
        "test_functions_stubs.cpp",
        "web_platform_stubs.cpp",
    ],
    deps = [
        "@duckdb_source//:duckdb_headers",
        "@duckdb_source//:duckdb_static",
    ],
    copts = [
        "-std=c++17",
        "-fexceptions",
        "-Wno-deprecated-declarations",
    ],
)
